Update 'a0my9vboz-python' component image to: quay.io/rhtap_qe/rhtap-qe:ba6e3558f5cca1b88c335da29113a6adc85bbbff@sha256:5faebb270920a83c67fa3d6d5c8a923e6397fe26a2af38f88550d9f92dc83c7e

--- a/components/a0my9vboz-python/overlays/development/deployment-patch.yaml
+++ b/components/a0my9vboz-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: a0my9vboz-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:ba6e3558f5cca1b88c335da29113a6adc85bbbff@sha256:5faebb270920a83c67fa3d6d5c8a923e6397fe26a2af38f88550d9f92dc83c7e
+          name: container-image
